# membot

./: .gitignore  README.md  example.env  main.py  pyproject.toml
chat_history/: 031925_1023.txt  031925_1725_gemma3.txt
modules/: active_mem.py  adapter.py  file_handler.py  prompts.py
